[gd_scene load_steps=12 format=3 uid="uid://cr8q101gfmgoy"]

[ext_resource type="Script" path="res://enemy/skeleton/base_skeleton_anim.gd" id="1_idmq2"]
[ext_resource type="Texture2D" uid="uid://cvygi6sxn5lgo" path="res://Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Idle/Idle-Sheet.png" id="2_10x13"]
[ext_resource type="PackedScene" uid="uid://dxswd25is51b" path="res://weapon/wood/wood_dagger.tscn" id="3_64jkv"]
[ext_resource type="PackedScene" uid="uid://i75l08t235g5" path="res://enemy/skeleton/bone_right_grip.tscn" id="4_pwibu"]
[ext_resource type="PackedScene" uid="uid://dqkm3lr4mll82" path="res://enemy/skeleton/bone_left_hand.tscn" id="5_qv6i4"]
[ext_resource type="Texture2D" uid="uid://cruvg05338nwk" path="res://Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Run/Run-Sheet.png" id="6_ld3b5"]
[ext_resource type="Texture2D" uid="uid://bhhplmndyrd2w" path="res://Pixel Crawler - FREE - 1.8/Enemy/Skeleton Crew/Skeleton - Base/Death/Death-Sheet.png" id="7_i863k"]

[sub_resource type="Animation" id="Animation_o4bia"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pgsdk"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_w26g0"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Idle/../Death:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6svol"]
_data = {
"death": SubResource("Animation_w26g0"),
"idle": SubResource("Animation_o4bia"),
"walk": SubResource("Animation_pgsdk")
}

[node name="BaseSkeletonAnim" type="Node2D"]
script = ExtResource("1_idmq2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Idle")
libraries = {
"": SubResource("AnimationLibrary_6svol")
}

[node name="Idle" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("2_10x13")
hframes = 4
frame = 3

[node name="WoodDagger" parent="." instance=ExtResource("3_64jkv")]
unique_name_in_owner = true
position = Vector2(14, -4)

[node name="BoneRightGrip" parent="." instance=ExtResource("4_pwibu")]
unique_name_in_owner = true
position = Vector2(14, 2)

[node name="BoneLeftHand" parent="." instance=ExtResource("5_qv6i4")]
unique_name_in_owner = true
position = Vector2(-15, 5)

[node name="Walk" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("6_ld3b5")
hframes = 6
vframes = 2
frame = 6

[node name="Death" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -15)
texture = ExtResource("7_i863k")
hframes = 8
frame = 2
